--- a/all.scss
+++ b/all.scss
@@ -93,7 +93,7 @@
         letter-spacing: 6px;
         z-index: 1;
         top: 0;
-        left: 15%;
+        left: 20px;
         font-size: 16px;
         
     }
