--- a/all.css
+++ b/all.css
@@ -86,6 +86,11 @@ img {
   text-decoration: none;
   color: #3F5D45;
   padding: 10px 30px;
+  border-bottom: 2px solid transparent;
+}
+.header__link:not(.shopping_car):hover {
+  border-bottom: 2px solid #78ae83;
+  color: #78ae83;
 }
 
 .banner {
@@ -110,7 +115,7 @@ img {
   gap: 20px;
 }
 .content__menu {
-  width: 30%;
+  min-width: 300px;
 }
 .content__menuItem {
   display: block;
@@ -122,7 +127,7 @@ img {
   color: #EAF0ED;
   background: #3F5D45;
 }
-.content__menuItem--select {
+.content__menuItem:not(.content__menuItem--title):hover {
   background: #EAF0ED;
 }
 .content__product {
@@ -130,11 +135,11 @@ img {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  width: 70%;
+  width: 640px;
 }
 .content__item {
   position: relative;
-  width: 47%;
+  width: 300px;
 }
 .content__img {
   margin-bottom: 12px;
@@ -153,6 +158,7 @@ img {
 }
 .content__text {
   display: flex;
+  width: 300px;
   justify-content: center;
   -moz-column-gap: 58px;
        column-gap: 58px;
